--- a/src/components/Signup.css
+++ b/src/components/Signup.css
@@ -1,11 +1,12 @@
 /* Signup.css */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
 
-body, html {
+.page-background {
   margin: 0;
   height: 100%;
   font-family: 'Poppins', sans-serif;
-  background: linear-gradient(120deg, #f6d365, #fda085);
+  overflow: hidden; /* Disable scroll */
+  background: linear-gradient(120deg, #2980b9, #6dd5fa, #ffffff);
   background-size: 300% 300%;
   animation: colors 15s ease infinite;
 }
@@ -23,21 +24,21 @@ body, html {
   border-radius: 15px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   padding: 40px;
-  max-width: 500px; /* A bit wider to accommodate more fields */
+  max-width: 500px;
   width: 100%;
   text-align: center;
   position: relative;
   backdrop-filter: blur(10px);
 }
 
-h2 {
+.header2 {
   color: #333;
   font-weight: 500;
   font-size: 2.5rem;
   margin-bottom: 1rem;
 }
 
-form {
+.form {
   margin-top: 1rem;
 }
 
@@ -45,16 +46,16 @@ form {
   margin-bottom: 1rem;
 }
 
-label {
+.label {
   display: block;
   margin-bottom: 0.5rem;
   font-weight: bold;
   color: #666;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="password"] {
+.input-text,
+.input-email,
+.input-password {
   width: 100%;
   padding: 1rem;
   border: none;
@@ -66,17 +67,17 @@ input[type="password"] {
   transition: all 0.3s ease;
 }
 
-input:focus {
+.input-focus:focus {
   background-color: #bdc3c7;
   outline: none;
 }
 
-button {
+.button {
   width: 100%;
   padding: 1rem;
   border: none;
   border-radius: 20px;
-  background-image: linear-gradient(45deg, #ff9671, #ff6b6b);
+  background-image: linear-gradient(120deg, #2980b9, #6dd5fa);
   color: #fff;
   font-size: 1.125rem;
   cursor: pointer;
@@ -84,31 +85,31 @@ button {
   transition: all 0.3s ease;
 }
 
-button:hover {
-  background-image: linear-gradient(45deg, #ff6b6b, #ff9671);
+.button:hover {
+  background-image: linear-gradient(120deg, #2980b9, #6dd5fa);
 }
 
-.login-link {
+.login-link-text {
   color: #666;
   margin-top: 1rem;
   font-size: 0.9rem;
 }
 
-.login-link a {
+.link {
   color: #3498db;
   text-decoration: none;
   font-weight: bold;
   transition: color 0.3s ease;
 }
 
-.login-link a:hover {
+.link:hover {
   color: #2980b9;
   text-decoration: underline;
 }
 
 .form-row {
     display: flex;
-    justify-content: space-between; /* This will take care of spacing between two columns */
+  justify-content: space-between;
     flex-wrap: wrap;
   }
   
@@ -119,12 +120,12 @@ button:hover {
   
   /* Adjust padding/margin for the individual input elements */
   .input-group.half-width {
-    padding-right: 10px; /* Right padding for the left column */
+  padding-right: 10px;
   }
   
   .input-group.half-width:last-child {
-    padding-right: 0; /* Removes padding for the right column */
-    padding-left: 10px; /* Adds padding to the left side of the right column */
+  padding-right: 0;
+  padding-left: 10px;
   }
   
   /* Make sure there is no extra space at the end of each row */
@@ -198,8 +199,8 @@ button:hover {
 
   .interests-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 columns */
-    gap: 10px; /* Spacing between items */
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
     margin-bottom: 20px;
   }
   
@@ -209,20 +210,17 @@ button:hover {
   }
   
   .interests-option input[type="checkbox"] {
-    margin-right: 5px; /* Spacing between checkbox and label */
+  margin-right: 5px;
   }
   
-  
-  /* Responsive adjustments */
   @media (max-width: 768px) {
     .input-group.half-width {
       padding: 0;
-      margin-right: 0; /* Stack input fields vertically without extra right margin */
-      flex-basis: 100%; /* Makes the input take full width */
+    margin-right: 0;
+    flex-basis: 100%;
     }
   }
 
-/* Keyframes for the animated background */
 @keyframes colors {
   0% { background-position: 0% 50%; }
   50% { background-position: 100% 50%; }
