--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -176,7 +176,7 @@
   }
   .news-image {
     width: 200px; /* Adjust the width as needed */
-    height: auto; /* Maintain aspect ratio */
+    height: 110px; /* Maintain aspect ratio */
     margin-right: 10px; /* Add some space between the image and text */
     float: left; /* Float the image to the left */
   }
