--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -37,13 +37,19 @@
     margin-bottom: 0.5rem;
     text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.7); /* Increased text shadow for better visibility */
   }
-  
-  .welcome-banner p {
+  .welcome-banner > .welcome-banner-content > p {
     font-size: 1.5rem;
     margin-bottom: 2rem;
     font-weight: 300;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Increased text shadow for better visibility */
-  }  
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.736); /* Apply text shadow only here */
+}
+  
+  /* .welcome-banner p {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+    font-weight: 300;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  }   */
 
   .main-content {
     max-width: 1200px;
