--- a/src/components/ManageViewEvents.css
+++ b/src/components/ManageViewEvents.css
@@ -41,6 +41,10 @@
   cursor: pointer;
 }
 
+.modal-header {
+  color: black;
+}
+
 
 /* Card container */
 .event-cards-container {
@@ -86,11 +90,12 @@
 .event-details h3 {
   margin-bottom: 10px;
   font-size: 18px;
+  color: black;
 }
 
 .event-details p {
   margin-bottom: 5px;
-  color: #333;
+  color: #1e1e1e;
   font-size: 14px;
 }
 
