--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -41,15 +41,8 @@
     font-size: 1.5rem;
     margin-bottom: 2rem;
     font-weight: 300;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.736); /* Apply text shadow only here */
-}
-  
-  /* .welcome-banner p {
-    font-size: 1.5rem;
-    margin-bottom: 2rem;
-    font-weight: 300;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-  }   */
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Increased text shadow for better visibility */
+  }  
 
   .main-content {
     max-width: 1200px;
